# seldon

./: .clang-tidy  .gitignore  .gitmessage  CODEOWNERS  CONTRIBUTING.md  README.md  environment.yml  meson.build  meson.options  pixi.toml  run_formatter.sh  run_linter.sh
.github/workflows/: ci.yml
benchmark/: benchmark_activity.cpp  benchmark_deGroot.cpp
examples/ActivityDriven/: conf.toml
examples/ActivityDrivenBot/: conf.toml
examples/ActivityDrivenInertial/: conf.toml
examples/ActivityDrivenMeanField/: conf.toml
examples/ActivityDrivenReluctance/: conf.toml
examples/DeGroot/: conf.toml
examples/Deffuant/: conf.toml
examples/DeffuantVector/: conf.toml
include/: agent.hpp  agent_base.hpp  agent_generation.hpp  agent_io.hpp  agent_writer.hpp  config_parser.hpp  connectivity.hpp  directed_network.hpp  main.hpp  model.hpp  model_base.hpp  model_factory.hpp  network.hpp  network_base.hpp  network_generation.hpp  network_io.hpp  run_model.hpp  simulation.hpp  state.hpp  undirected_network.hpp
include/agents/: activity_agent.hpp  discrete_vector_agent.hpp  inertial_agent.hpp  simple_agent.hpp
include/models/: ActivityDrivenModel.hpp  DeGroot.hpp  DeffuantModel.hpp  InertialModel.hpp
include/util/: erfinv.hpp  io.hpp  math.hpp  misc.hpp  tomlplusplus.hpp
src/: config_parser.cpp  main.cpp  model.cpp  network.cpp  network_generation.cpp  run_model.cpp  simulation.cpp  state.cpp
src/models/: ActivityDrivenModel.cpp  DeGroot.cpp  DeffuantModel.cpp  DeffuantModelVector.cpp  InertialModel.cpp
src/util/: tomlplusplus.cpp
test/: test_activity.cpp  test_activity_inertial.cpp  test_b.cpp  test_deGroot.cpp  test_deffuant.cpp  test_io.cpp  test_network.cpp  test_network_generation.cpp  test_probability_distributions.cpp  test_sampling.cpp  test_tarjan.cpp  test_util.cpp
test/res/: 10_agents_meanfield_activity.toml  1bot_1agent_activity_prob.toml  1bot_1agent_inertial.toml  2_agents_activity_prob.toml  activity_probabilistic_conf.toml  deffuant_16x16_agents.toml  deffuant_2agents.toml  deffuant_vector_2agents.toml  network.txt  opinions.txt
